--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -7,6 +7,10 @@ COPY client/package.json client/package-lock.json ./
 RUN npm install
 
 COPY client/ .
+
+ARG VITE_PROD_API_URL
+ENV VITE_PROD_API_URL=$VITE_PROD_API_URL
+
 RUN npm run build
 
 # Use nginx to serve build
